--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -247,10 +247,10 @@
       "execution_count": 10,
       "metadata": {
         "id": "BKVVCyQNsiZt",
-        "outputId": "4916bd12-f69c-4d66-a3bd-09e3d2b1fc57",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4916bd12-f69c-4d66-a3bd-09e3d2b1fc57"
       },
       "outputs": [
         {
@@ -444,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -457,8 +457,51 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "INFO:biolib:Loaded project BioITWorkshop/ProteinMPNN:1.0.3\n"
+            "INFO:biolib:Loaded project BioITWorkshop/ProteinMPNN:1.0.3\n",
+            "INFO:biolib:View the result in your browser at: https://biolib.com/results/a3abb799-ad63-4cb5-bc5d-678442b5e293/\n",
+            "INFO:biolib:Cloud: Initializing\n",
+            "INFO:biolib:Cloud: Pulling images...\n",
+            "INFO:biolib:Cloud: Computing...\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processing all PDB files in rfdiffusion\r\n",
+            "Running with args:  ['poetry', 'run', 'python', '/opt/rfantibody/scripts/proteinmpnn_interface_design.py', '-pdbdir', 'rfdiffusion', '-outpdbdir', 'output/', '-checkpoint_path', '/opt/rfantibody/weights/ProteinMPNN_v48_noise_0.2.pt', '-seqs_per_struct', '4']\n",
+            "Found GPU will run ProteinMPNN on GPU\n",
+            "Attempting pose: rfdiffusion/ab_design_0.pdb\n",
+            "loopH: [25, 26, 27, 28, 29, 30, 31, 51, 52, 53, 54, 55, 56, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107]\n",
+            "loopL: [142, 143, 144, 145, 146, 147, 148, 149, 165, 166, 167, 168, 169, 170, 171, 204, 205, 206, 207, 208, 209, 210, 211, 212]\n",
+            "MPNN generated 4 sequences in 6 seconds\n",
+            "sequence_optimize: [('EVQLVESGGGLVQPGGSLRLSCAASGIDITQGYIHWVRQAPGKGLEWVARIAPSSNGTRYADSVKGRFTISADTSKNTAYLQMNSLRAEDTAVYYCSWSPSSSSDMYGWGQGTLVTVSSDIQMTQSPSSLSASVGDRVTITGKSDTEYAGWYQQKPGKAPKLLISSATTRAGGVPSRFSGSRSGTDFTLTISSLQPEDFATYYQVNTATDPVGFGQGTKVEIK', 1.5364556), ('EVQLVESGGGLVQPGGSLRLSCAASGIDITQGYIHWVRQAPGKGLEWVARVSPSSNGTRYADSVKGRFTISADTSKNTAYLQMNSLRAEDTAVYYCSWSPSSSSYLYGWGQGTLVTVSSDIQMTQSPSSLSASVGDRVTITSKTDTEYAGWYQQKPGKAPKLLIYSATERAGGVPSRFSGSRSGTDFTLTISSLQPEDFATYYSYNSATEPYGFGQGTKVEIK', 1.5035527), ('EVQLVESGGGLVQPGGSLRLSCAASGIDITQGYIHWVRQAPGKGLEWVARVSASSNGTRYADSVKGRFTISADTSKNTAYLQMNSLRAEDTAVYYCSWSPSSSSYLTGWGQGTLVTVSSDIQMTQSPSSLSASVGDRVTITSKTDTEYVGWYQQKPGKAPKLLISSGTTRAGGVPSRFSGSRSGTDFTLTISSLQPEDFATYYAYTYATDPYGFGQGTKVEIK', 1.4470359), ('EVQLVESGGGLVQPGGSLRLSCAASGIDITQGYIHWVRQAPGKGLEWVARVAPSSNGTRYADSVKGRFTISADTSKNTAYLQMNSLRAEDTAVYYCSWSPSSSSYLYGWGQGTLVTVSSDIQMTQSPSSLSASVGDRVTITAKTDTNYAGWYQQKPGKAPKLLIYSATVRAGGVPSRFSGSRSGTDFTLTISSLQPEDFATYYFYNYATEPYGFGQGTKVEIK', 1.4570433)]\n",
+            "Struct: rfdiffusion/ab_design_0.pdb reported success in 7 seconds\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:biolib:Cloud: Computation finished\n",
+            "INFO:biolib:Cloud: Result Ready\n",
+            "INFO:biolib:Waiting for job a3abb799-ad63-4cb5-bc5d-678442b5e293 to finish...\n",
+            "INFO:biolib:Job a3abb799-ad63-4cb5-bc5d-678442b5e293 has finished.\n",
+            "INFO:biolib:Saving 4 files to output/proteinmpnn...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[File \"/ab_design_0_dldesign_0.pdb\" with size of 128446 bytes,\n",
+              " File \"/ab_design_0_dldesign_1.pdb\" with size of 128446 bytes,\n",
+              " File \"/ab_design_0_dldesign_2.pdb\" with size of 128446 bytes,\n",
+              " File \"/ab_design_0_dldesign_3.pdb\" with size of 128446 bytes]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
         }
       ],
       "source": [
@@ -469,7 +512,7 @@
         "app_mpnn = biolib.load('BioITWorkshop/ProteinMPNN')\n",
         "job_mpnn = app_mpnn.run(\n",
         "    pdb=input_dir,\n",
-        "    num_seqs_per_struct=4\n",
+        "    num_seqs_per_struct=3\n",
         ")\n",
         "job_mpnn.save_files(\"output/proteinmpnn\", skip_file_if_exists=True)\n",
         "job_mpnn.list_output_files()"
@@ -485,8 +528,8 @@
         "ProteinMPNN outputs PDB files with the same structures as the input but with amino acid sequences designed for the CDR loops. By default, it provides one sequence per input structure.\n",
         "\n",
         "Output files:\n",
-        "- _0_dldesign_0.pdb (antibody structure with predicted CDR residues)\n",
-        "- _0_dldesign_1.pdb (antibody structure with predicted CDR residues)\n",
+        "- ab_design_0_dldesign_0.pdb (antibody structure with predicted CDR residues)\n",
+        "- ab_design_0_dldesign_1.pdb (antibody structure with predicted CDR residues)\n",
         "- ... etc\n",
         "\n",
         "\n",
@@ -530,15 +573,55 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PjZ8w1kChCJM",
-        "outputId": "0efaafbe-8653-4e85-bf6c-51cdae2f2700"
+        "outputId": "d4ac58d7-28af-41b3-9b14-17a46732dacc"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "INFO:biolib:Loaded project BioITWorkshop/RF2Antibody:0.0.3\n",
-            "INFO:biolib:View the result in your browser at: https://biolib.com/results/a4de66df-5bdd-4ff5-b7e5-3680ece86287/\n"
+            "INFO:biolib:Loaded project BioITWorkshop/RF2Antibody:1.0.3\n",
+            "INFO:biolib:View the result in your browser at: https://biolib.com/results/a59a3f0b-5121-4917-8741-d7a81c4a4b73/\n",
+            "INFO:biolib:Cloud: Initializing\n",
+            "INFO:biolib:Cloud: Pulling images...\n",
+            "INFO:biolib:Cloud: Computing...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Processing all PDB files in proteinmpnn\r\n",
+            "Running with args:  ['poetry', 'run', 'python', '/opt/rfantibody/scripts/rf2_predict.py', 'input.pdb_dir=proteinmpnn', 'output.pdb_dir=output/', 'inference.num_recycles=3']\n",
+            "DGL backend not selected or invalid.  Assuming PyTorch for now.\n",
+            "Setting the default backend to \"pytorch\". You can change it in the ~/.dgl/config.json file or export the DGLBACKEND environment variable.  Valid options are: pytorch, mxnet, tensorflow (all lowercase)\n",
+            "Running RF2 with the following configs: {'input': {'pdb': None, 'pdb_dir': 'proteinmpnn', 'quiver': None}, 'output': {'pdb_dir': 'output/', 'quiver': None, 'output_intermediates': False}, 'inference': {'num_recycles': 3, 'hotspot_show_proportion': 0.1, 'cautious': True}, 'model': {'model_weights': '/opt/rfantibody/weights/RF2_ab.pt'}, 'model_param': {'n_extra_block': 4, 'n_main_block': 36, 'd_msa': 256, 'd_pair': 128, 'd_templ': 64, 'n_head_msa': 8, 'n_head_pair': 4, 'n_head_templ': 4, 'd_hidden': 32, 'd_hidden_templ': 32, 'd_t1d': 23, 'p_drop': 0.0, 'SE3_param_full': {'num_layers': 1, 'num_channels': 48, 'num_degrees': 2, 'l0_in_features': 32, 'l0_out_features': 32, 'l1_in_features': 2, 'l1_out_features': 2, 'num_edge_features': 32, 'div': 4, 'n_heads': 4}, 'SE3_param_topk': {'num_layers': 1, 'num_channels': 128, 'num_degrees': 2, 'l0_in_features': 64, 'l0_out_features': 64, 'l1_in_features': 2, 'l1_out_features': 2, 'num_edge_features': 64, 'div': 4, 'n_heads': 4}}}\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.978\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.990\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.990\n",
+            "TM-score of framework alignment: 0.978\n",
+            "TM-score of target alignment: 0.991\n",
+            "TM-score of framework alignment: 0.978\n",
+            "TM-score of target alignment: 0.990\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.980\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.977\n"
           ]
         }
       ],
