--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -567,7 +567,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -621,8 +621,39 @@
             "TM-score of target alignment: 0.989\n",
             "TM-score of framework alignment: 0.979\n",
             "TM-score of target alignment: 0.989\n",
-            "TM-score of framework alignment: 0.977\n"
+            "TM-score of framework alignment: 0.977\n",
+            "TM-score of target alignment: 0.990\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.979\n",
+            "TM-score of target alignment: 0.989\n",
+            "TM-score of framework alignment: 0.979\n"
           ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:biolib:Cloud: Computation finished\n",
+            "INFO:biolib:Cloud: Result Ready\n",
+            "INFO:biolib:Waiting for job a59a3f0b-5121-4917-8741-d7a81c4a4b73 to finish...\n",
+            "INFO:biolib:Job a59a3f0b-5121-4917-8741-d7a81c4a4b73 has finished.\n",
+            "INFO:biolib:Saving 5 files to output/rosettafold2...\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[File \"/ab_design_0_dldesign_2.pdb\" with size of 478843 bytes,\n",
+              " File \"/ab_design_0_dldesign_3.pdb\" with size of 480853 bytes,\n",
+              " File \"/ab_design_0_dldesign_0.pdb\" with size of 477636 bytes,\n",
+              " File \"/ab_design_0_dldesign_1.pdb\" with size of 479712 bytes,\n",
+              " File \"/scores.csv\" with size of 557 bytes]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ],
       "source": [
@@ -650,8 +681,8 @@
         "\n",
         "Output files:\n",
         "- scores.csv - Predicted structural quality scores for filtering of designs\n",
-        "- _0_dldesign_0.pdb - Predicted structure of design 0\n",
-        "- _0_dldesign_1.pdb - Predicted structure of design 1\n",
+        "- ab_design_0_dldesign_1.pdb - Predicted structure of design 0\n",
+        "- ab_design_0_dldesign_2 - Predicted structure of design 1\n",
         "- ... etc\n",
         "\n",
         "Example output scores.tsv:\n",
