--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -244,13 +244,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 15,
       "metadata": {
         "id": "BKVVCyQNsiZt",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4916bd12-f69c-4d66-a3bd-09e3d2b1fc57"
+        "outputId": "2a70184a-147a-42d5-8369-0e3eaa6fffb9"
       },
       "outputs": [
         {
@@ -682,7 +682,7 @@
         "Output files:\n",
         "- scores.csv - Predicted structural quality scores for filtering of designs\n",
         "- ab_design_0_dldesign_1.pdb - Predicted structure of design 0\n",
-        "- ab_design_0_dldesign_2 - Predicted structure of design 1\n",
+        "- ab_design_0_dldesign_2.pdb - Predicted structure of design 1\n",
         "- ... etc\n",
         "\n",
         "Example output scores.tsv:\n",
@@ -712,7 +712,6 @@
         "1. **RFdiffusion (antibody fine-tuned)**: Generating antibody-target docking poses with designed CDR loop structures\n",
         "2. **ProteinMPNN (antibody fine-tuned)**: Designing amino acid sequences for the CDR loops\n",
         "3. **RosettaFold2 (antibody fine-tuned)**: Filtering designs based on predicted structure quality\n",
-        "4. **AntibodyProfiler**: Further selection of designs based on similarity to therapeutically approved antibodies\n",
         "\n",
         "This computational pipeline can generate designs with a success rate of approximately 2% for some degree of binding to the target. Further experimental validation and optimization is likely to be required to improve binding affinity and other pharmaceutical properties.\n",
         "\n",
@@ -725,7 +724,7 @@
         "id": "3ESnZr39rdTR"
       },
       "source": [
-        "### Bring your own antibody target\n",
+        "### Bring your own target\n",
         "\n",
         "In order to provide your own target PDB, you'll need to convert it into an HLT format first ([described here](https://github.com/RosettaCommons/RFantibody/blob/main/README.md#hlt-file-format) ).\n",
         "\n",
