--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -149,8 +149,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib_no_user_data:Already signed in\n"
           ]
@@ -246,16 +246,16 @@
       "cell_type": "code",
       "execution_count": 15,
       "metadata": {
-        "id": "BKVVCyQNsiZt",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "BKVVCyQNsiZt",
         "outputId": "2a70184a-147a-42d5-8369-0e3eaa6fffb9"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Framework PDB exists: True\n",
             "Target PDB exists: True\n",
@@ -292,8 +292,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Loaded project BioITWorkshop/RFDiffusionAntibody:1.0.6\n",
             "INFO:biolib:View the result in your browser at: https://biolib.com/results/4cfc5aa4-735e-48fa-b740-baebda571148/\n",
@@ -303,8 +303,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Running RFDiffusion Antibody...\r\n",
             "Starting generation of 1 design(s)...\r\n",
@@ -319,22 +319,22 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Cloud: Computation finished\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Completed generating 1 design(s)...\r\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Cloud: Result Ready\n",
             "INFO:biolib:Waiting for job 4cfc5aa4-735e-48fa-b740-baebda571148 to finish...\n",
@@ -343,8 +343,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Skipping output/rfdiffusion/ab_design_0.trb as a file with that name already exists locally.\n",
             "Skipping output/rfdiffusion/ab_design_0.pdb as a file with that name already exists locally.\n",
@@ -353,7 +353,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[File \"/ab_design_0.trb\" with size of 98153 bytes,\n",
@@ -362,8 +361,9 @@
               " File \"/traj/ab_design_0_pX0_traj.pdb\" with size of 11487500 bytes]"
             ]
           },
+          "execution_count": 11,
           "metadata": {},
-          "execution_count": 11
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -454,8 +454,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Loaded project BioITWorkshop/ProteinMPNN:1.0.3\n",
             "INFO:biolib:View the result in your browser at: https://biolib.com/results/a3abb799-ad63-4cb5-bc5d-678442b5e293/\n",
@@ -465,8 +465,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Processing all PDB files in rfdiffusion\r\n",
             "Running with args:  ['poetry', 'run', 'python', '/opt/rfantibody/scripts/proteinmpnn_interface_design.py', '-pdbdir', 'rfdiffusion', '-outpdbdir', 'output/', '-checkpoint_path', '/opt/rfantibody/weights/ProteinMPNN_v48_noise_0.2.pt', '-seqs_per_struct', '4']\n",
@@ -480,8 +480,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Cloud: Computation finished\n",
             "INFO:biolib:Cloud: Result Ready\n",
@@ -491,7 +491,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[File \"/ab_design_0_dldesign_0.pdb\" with size of 128446 bytes,\n",
@@ -500,8 +499,9 @@
               " File \"/ab_design_0_dldesign_3.pdb\" with size of 128446 bytes]"
             ]
           },
+          "execution_count": 13,
           "metadata": {},
-          "execution_count": 13
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -577,8 +577,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Loaded project BioITWorkshop/RF2Antibody:1.0.3\n",
             "INFO:biolib:View the result in your browser at: https://biolib.com/results/a59a3f0b-5121-4917-8741-d7a81c4a4b73/\n",
@@ -588,8 +588,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Processing all PDB files in proteinmpnn\r\n",
             "Running with args:  ['poetry', 'run', 'python', '/opt/rfantibody/scripts/rf2_predict.py', 'input.pdb_dir=proteinmpnn', 'output.pdb_dir=output/', 'inference.num_recycles=3']\n",
@@ -631,8 +631,8 @@
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "INFO:biolib:Cloud: Computation finished\n",
             "INFO:biolib:Cloud: Result Ready\n",
@@ -642,7 +642,6 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[File \"/ab_design_0_dldesign_2.pdb\" with size of 478843 bytes,\n",
@@ -652,8 +651,9 @@
               " File \"/scores.csv\" with size of 557 bytes]"
             ]
           },
+          "execution_count": 14,
           "metadata": {},
-          "execution_count": 14
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -755,6 +755,34 @@
         "\n",
         "For practical tips on antibody design, we refer to Baker Lab's RFAntibody README's [practical considerations for Antibody Design ](https://github.com/RosettaCommons/RFantibody/blob/main/README.md#practical-considerations-for-antibody-design)."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Example target workflow\n",
+        "\n",
+        "1. Choose a target from RCSB, e.g. the X-ray structure of 1M47 Human interleukin-2: https://www.rcsb.org/structure/1M47\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/rcsb_IL.png?raw=1\" style=\"width:40%;\">\n",
+        "\n",
+        "2. Predict likely epitope residues with a tool like DiscoTope-3.0: https://biolib.com/DTU/DiscoTope-3\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/discotope3.png?raw=1\" style=\"width:40%;\">\n",
+        "\n",
+        "3. Process the PDB file with the TargetPDBtoHLT app: https://biolib.com/BioITWorkshop/TargetPDBtoHLT/\n",
+        "\n",
+        "4. Upload to Google Colab, and change the target_pdb variable to e.g. 1M47_T.pdb (in Step 1)\n",
+        "\n",
+        "5. Change the epitope_residues variable to e.g. '[T41, T111]' based on predicted epitopes\n",
+        "\n",
+        "6. Run through the workflow as normal.\n",
+        "\n",
+        "For this target, the known antibody-antigen dock is available at:\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
