--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -266,8 +266,10 @@
       "source": [
         "# RFDiffusion input\n",
         "framework_pdb = \"hu-4D5-8_Fv.pdb\"\n",
-        "target_pdb = \"rsv_site3.pdb\"\n",
-        "hotspot_res = \"[T305,T456]\"\n",
+        "#target_pdb = \"rsv_site3.pdb\"\n",
+        "#hotspot_res = \"[T305,T456]\"\n",
+        "target_pdb = \"1m47_T.pdb\"\n",
+        "hotspot_res = \"[T41,T111]\"\n",
         "\n",
         "# RFDiffusion parameters\n",
         "design_loops = \"[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]\"\n",
@@ -763,20 +765,28 @@
         "## Example target workflow\n",
         "\n",
         "1. Choose a target from RCSB, e.g. the X-ray structure of 1M47 Human interleukin-2: https://www.rcsb.org/structure/1M47\n",
+        "\n",
         "<img src=\"https://github.com/mhoie/workshop/blob/main/img/rcsb_IL.png?raw=1\" style=\"width:40%;\">\n",
         "\n",
         "2. Predict likely epitope residues with a tool like DiscoTope-3.0: https://biolib.com/DTU/DiscoTope-3\n",
+        "\n",
         "<img src=\"https://github.com/mhoie/workshop/blob/main/img/discotope3.png?raw=1\" style=\"width:40%;\">\n",
         "\n",
         "3. Process the PDB file with the TargetPDBtoHLT app: https://biolib.com/BioITWorkshop/TargetPDBtoHLT/\n",
         "\n",
         "4. Upload to Google Colab, and change the target_pdb variable to e.g. 1M47_T.pdb (in Step 1)\n",
         "\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/change_params.png?raw=1\" style=\"width:40%;\">\n",
+        "\n",
+        "\n",
         "5. Change the epitope_residues variable to e.g. '[T41, T111]' based on predicted epitopes\n",
+        "\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/sabdab.png?raw=1\" style=\"width:40%;\">\n",
         "\n",
         "6. Run through the workflow as normal.\n",
         "\n",
-        "For this target, the known antibody-antigen dock is available at:\n"
+        "For this target, the known antibody-antigen dock is available at SAbDab for comparison:\n",
+        "https://opig.stats.ox.ac.uk/webapps/sabdab-sabpred/sabdab/structureviewer/?pdb=8sow\n"
       ]
     },
     {
