--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 11,
       "metadata": {
         "id": "NyBRznjZhCJL"
       },
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -149,10 +149,10 @@
       },
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "INFO:biolib_no_user_data:Already signed in\n"
+            "2025-04-01 11:58:47,180 | INFO : Already signed in\n"
           ]
         }
       ],
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 13,
       "metadata": {
         "id": "geQVU_mXhCJL"
       },
@@ -244,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -284,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -294,78 +294,18 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:biolib:Loaded project BioITWorkshop/RFDiffusionAntibody:1.0.6\n",
-            "INFO:biolib:View the result in your browser at: https://biolib.com/results/4cfc5aa4-735e-48fa-b740-baebda571148/\n",
-            "INFO:biolib:Cloud: Initializing\n",
-            "INFO:biolib:Cloud: Pulling images...\n",
-            "INFO:biolib:Cloud: Computing...\n"
-          ]
-        },
-        {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Running RFDiffusion Antibody...\r\n",
-            "Starting generation of 1 design(s)...\r\n",
-            "Loading model...\n",
-            "Design 0: timestep 15/50\n",
-            "Design 0: timestep 20/50\n",
-            "Design 0: timestep 25/50\n",
-            "Design 0: timestep 30/50\n",
-            "Design 0: timestep 35/50\n",
-            "Design 0: timestep 40/50\n",
-            "Design 0: timestep 45/50\n"
+            "2025-04-01 11:59:10,896 | INFO : Loaded project BioITWorkshop/RFDiffusionAntibody:1.0.6\n",
+            "2025-04-01 11:59:13,484 | INFO : View the result in your browser at: https://biolib.com/results/9fdde2f8-151c-4ff4-aa45-7daecc4ec8c3/\n",
+            "2025-04-01 11:59:16,631 | INFO : Cloud: Initializing\n",
+            "2025-04-01 11:59:16,633 | INFO : Cloud: Pulling images...\n",
+            "2025-04-01 11:59:16,634 | INFO : Cloud: Computing...\n",
+            "Running RFDiffusion Antibody...\n",
+            "Starting generation of 1 design(s)...\n",
+            "Loading model...\n"
           ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:biolib:Cloud: Computation finished\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Completed generating 1 design(s)...\r\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:biolib:Cloud: Result Ready\n",
-            "INFO:biolib:Waiting for job 4cfc5aa4-735e-48fa-b740-baebda571148 to finish...\n",
-            "INFO:biolib:Job 4cfc5aa4-735e-48fa-b740-baebda571148 has finished.\n",
-            "INFO:biolib:Saving 4 files to output/rfdiffusion...\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Skipping output/rfdiffusion/ab_design_0.trb as a file with that name already exists locally.\n",
-            "Skipping output/rfdiffusion/ab_design_0.pdb as a file with that name already exists locally.\n",
-            "Skipping output/rfdiffusion/traj/ab_design_0_Xt-1_traj.pdb as a file with that name already exists locally.\n",
-            "Skipping output/rfdiffusion/traj/ab_design_0_pX0_traj.pdb as a file with that name already exists locally.\n"
-          ]
-        },
-        {
-          "data": {
-            "text/plain": [
-              "[File \"/ab_design_0.trb\" with size of 98153 bytes,\n",
-              " File \"/ab_design_0.pdb\" with size of 130086 bytes,\n",
-              " File \"/traj/ab_design_0_Xt-1_traj.pdb\" with size of 4888670 bytes,\n",
-              " File \"/traj/ab_design_0_pX0_traj.pdb\" with size of 11487500 bytes]"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -774,14 +714,11 @@
         "\n",
         "3. Process the PDB file with the TargetPDBtoHLT app: https://biolib.com/BioITWorkshop/TargetPDBtoHLT/\n",
         "\n",
-        "4. Upload to Google Colab, and change the target_pdb variable to e.g. 1M47_T.pdb (in Step 1)\n",
+        "4. Upload the processed PDB to Google Colab, and change the target_pdb variable to e.g. 1M47_T.pdb (in Step 1)\n",
         "\n",
-        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/change_params.png?raw=1\" style=\"width:40%;\">\n",
-        "\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/change_params.png?raw=1\" style=\"width:30%;\">\n",
         "\n",
         "5. Change the epitope_residues variable to e.g. '[T41, T111]' based on predicted epitopes\n",
-        "\n",
-        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/sabdab.png?raw=1\" style=\"width:40%;\">\n",
         "\n",
         "6. Run through the workflow as normal.\n",
         "\n",
