--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -648,8 +648,16 @@
         "This notebook has demonstrated the complete RFantibody pipeline for structure-based design of de novo antibodies. The workflow consists of three main steps:\n",
         "\n",
         "1. **RFdiffusion (antibody fine-tuned)**: Generating antibody-target docking poses with designed CDR loop structures\n",
-        "2. **ProteinMPNN (antibody fine-tuned)**: Designing amino acid sequences for the CDR loops\n",
+        "2. **ProteinMPNN**: Designing amino acid sequences for the CDR loops\n",
         "3. **RosettaFold2 (antibody fine-tuned)**: Filtering designs based on predicted structure quality\n",
+        "\n",
+        "Adjusting the following parameters:\n",
+        "- i) Antibody framework\n",
+        "- ii) Target PDB\n",
+        "- iii) Epitope residues\n",
+        "- iv) No. 3D backbone designs (RFDiffusion)\n",
+        "- v) CDR loop lengths (RFDiffusion)\n",
+        "- vi) No. designed sequences (ProteinMPNN)\n",
         "\n",
         "This computational pipeline can generate designs with a success rate of approximately 2% for some degree of binding to the target. Further experimental validation and optimization is likely to be required to improve binding affinity and other pharmaceutical properties.\n",
         "\n",
@@ -733,7 +741,7 @@
         "\n",
         "3. Process the PDB file with the TargetPDBtoHLT app: https://biolib.com/BioITWorkshop/TargetPDBtoHLT/\n",
         "\n",
-        "4. Upload the processed PDB to Google Colab, and change the target_pdb variable to e.g. 1M47_T.pdb (in Step 1)\n",
+        "4. Upload the processed PDB to Google Colab, and change the target_pdb variable to e.g. '1m47_T.pdb' (in Step 1)\n",
         "\n",
         "<img src=\"https://github.com/mhoie/workshop/blob/main/img/change_params.png?raw=1\" style=\"width:30%;\">\n",
         "\n",
@@ -744,13 +752,6 @@
         "For this target, the known antibody-antigen dock is available at SAbDab for comparison:\n",
         "https://opig.stats.ox.ac.uk/webapps/sabdab-sabpred/sabdab/structureviewer/?pdb=8sow\n"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "markdown",
