--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -38,7 +38,7 @@
       "source": [
         "Antibody therapeutics represent a substantial market (approximately $550M USD) with tremendous potential for treating various diseases. Traditional approaches to antibody discovery are slow and laborious, typically involving immunizing mice or screening random libraries.\n",
         "\n",
-        "This notebook implements the [RFAntibody pipeline](https://github.com/RosettaCommons/RFantibody/tree/main) (described in this [pre-print](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2) ) for structure-based design of de novo antibodies against a chosen target.\n",
+        "This notebook implements the [RFAntibody pipeline](https://github.com/RosettaCommons/RFantibody/tree/main), described in this [pre-print](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2), for structure-based design of de novo antibodies against a chosen target.\n",
         "\n",
         "**Inputs:**\n",
         "- i) An input antibody framework (e.g. hu-4D5-8_Fv.pdb - a humanized ScFv antibody framework PDB\n",
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "NyBRznjZhCJL"
       },
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "geQVU_mXhCJL"
       },
@@ -243,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -414,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -519,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -632,7 +632,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Q0MoVtazZEX7"
+      },
       "source": [
         "---"
       ]
@@ -666,7 +668,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "7a_cG3K2ZEX7"
+      },
       "source": [
         "---"
       ]
@@ -684,8 +688,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "OLUGKpClZEX7"
+      },
       "outputs": [],
       "source": [
         "!mv output/ output_old"
@@ -693,7 +699,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "dnjaiYCvZEX7"
+      },
       "source": [
         "In order to provide your own target PDB, you'll need to convert it into an HLT format first ([described here](https://github.com/RosettaCommons/RFantibody/blob/main/README.md#hlt-file-format) ).\n",
         "\n",
@@ -719,13 +727,17 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "2Sm60J9JZEX7"
+      },
       "outputs": [],
       "source": []
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "JxdlmboHZEX7"
+      },
       "source": [
         "### Example new target workflow\n",
         "\n",
@@ -755,7 +767,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "KkC9ZvA1ZEX7"
+      },
       "source": []
     }
   ],
