--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -127,7 +127,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "NyBRznjZhCJL"
       },
@@ -139,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -180,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "geQVU_mXhCJL"
       },
@@ -243,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -281,7 +281,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -414,7 +414,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -519,7 +519,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -632,9 +632,7 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Q0MoVtazZEX7"
-      },
+      "metadata": {},
       "source": [
         "---"
       ]
@@ -653,14 +651,6 @@
         "2. **ProteinMPNN**: Designing amino acid sequences for the CDR loops\n",
         "3. **RosettaFold2 (antibody fine-tuned)**: Filtering designs based on predicted structure quality\n",
         "\n",
-        "Adjusting the following parameters:\n",
-        "- i) Antibody framework\n",
-        "- ii) Target PDB\n",
-        "- iii) Epitope residues\n",
-        "- iv) No. 3D backbone designs (RFDiffusion)\n",
-        "- v) CDR loop lengths (RFDiffusion)\n",
-        "- vi) No. designed sequences (ProteinMPNN)\n",
-        "\n",
         "This computational pipeline can generate designs with a success rate of approximately 2% for some degree of binding to the target. Further experimental validation and optimization is likely to be required to improve binding affinity and other pharmaceutical properties.\n",
         "\n",
         "For larger scale antibody design campaigns, we recommended to generating thousands of designs to increase the chances of finding high-quality binders, as the current filtering metrics are still highly limited."
@@ -668,9 +658,16 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7a_cG3K2ZEX7"
-      },
+      "metadata": {},
+      "source": [
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/rfantibody.png?raw=1\" style=\"width:60%;\">\n",
+        "\n",
+        "For practical tips on antibody design, we refer to Baker Lab's RFAntibody README's [practical considerations for Antibody Design ](https://github.com/RosettaCommons/RFantibody/blob/main/README.md#practical-considerations-for-antibody-design)."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "---"
       ]
@@ -681,17 +678,15 @@
         "id": "3ESnZr39rdTR"
       },
       "source": [
-        "## Bring your own target\n",
+        "## What to try next\n",
         "\n",
         "(Before processing, remember to rename your output folder to e.g. output2, or you'll be re-running old results!)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "OLUGKpClZEX7"
-      },
+      "execution_count": 23,
+      "metadata": {},
       "outputs": [],
       "source": [
         "!mv output/ output_old"
@@ -699,10 +694,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "dnjaiYCvZEX7"
-      },
+      "metadata": {},
       "source": [
+        "## A) Generate antibodies against a new target protein\n",
         "In order to provide your own target PDB, you'll need to convert it into an HLT format first ([described here](https://github.com/RosettaCommons/RFantibody/blob/main/README.md#hlt-file-format) ).\n",
         "\n",
         "- i) Upload your target PDB file to the TargetPDBtoHLT app on BioLib: https://biolib.com/BioITWorkshop/TargetPDBtoHLT/\n",
@@ -714,30 +708,7 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "hUXXUyaQut1W"
-      },
-      "source": [
-        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/rfantibody.png?raw=1\" style=\"width:60%;\">\n",
-        "\n",
-        "\n",
-        "For practical tips on antibody design, we refer to Baker Lab's RFAntibody README's [practical considerations for Antibody Design ](https://github.com/RosettaCommons/RFantibody/blob/main/README.md#practical-considerations-for-antibody-design)."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "2Sm60J9JZEX7"
-      },
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "JxdlmboHZEX7"
-      },
+      "metadata": {},
       "source": [
         "### Example new target workflow\n",
         "\n",
@@ -766,10 +737,69 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "KkC9ZvA1ZEX7"
-      },
+      "metadata": {},
+      "source": [
+        "## B) Try a nanobody framework\n",
+        "\n",
+        "Swap out the heavy + light chain ScFv antibody framework (hu-4D5-8_Fv) for a nanobody framework instead:\n",
+        "\n",
+        "```bash\n",
+        "framework_pdb = \"h-NbBCII10.pdb\"\n",
+        "```\n",
+        "\n",
+        "h-NbBcII10FGLA is a widely used, humanized nanobody framework. Due to their smaller size and ease of assembly, nanobodies are hugely popular in antibody design. Two FDA-approved nanobody therapeutics already exist on the market (see [pre-print](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2) )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## C) Optimize the workflow\n",
+        "\n",
+        "Optimize the following parameters to increase diversity of the generated designs, aiming to get the lowest possible pAE + CDR RMSD design.\n",
+        "\n",
+        "- i) Antibody framework\n",
+        "- ii) Target PDB\n",
+        "- iii) Epitope residues\n",
+        "- iv) No. 3D backbone designs (RFDiffusion)\n",
+        "- v) CDR loop lengths (RFDiffusion)\n",
+        "- vi) No. designed sequences (ProteinMPNN)\n",
+        "\n",
+        "Lower pAE values correlates strongly with experimental success rate and improved accuracy of the design antibody docks (see [pre-print](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2) )\n",
+        "\n",
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/pae.png?raw=1\" style=\"width:60%;\">\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": []
     }
   ],
